# libsingularity

./: .gitignore  CLA.md  CONTRIBUTING.md  README.md  meson.build  meson_options.txt  singularity-1.0.deps  singularity-system-1.0.deps
data/: libsingularity.gresource.xml
data/gtk-theme/: README.md  build-css.py  index.theme
data/gtk-theme/_sass/: _color-palette-default.scss  _singularity.scss
data/gtk-theme/gtk/3.0/: meson.build  singularity-dark.scss  singularity.scss
data/gtk-theme/gtk/4.0/: meson.build  singularity-dark.scss  singularity.scss
po/: POTFILES.in  meson.build
src/accessibility/: accessibility_manager.vala
src/animation/: animation.vala  timed_animation.vala
src/calendar/: calendar_contract.vala
src/core/: app_settings_contract.vala  app_settings_loader.vala  application.vala  environment.vala  files_plugin_contract.vala  overview_widget_registry.vala  plugin_contract.vala  search_provider.vala  settings_contract.vala  settings_util.vala  shell_application.vala  shell_contract.vala  shell_surface_contract.vala  terminal_themes.vala  vpn_provider.vala
src/file_system/: file_provider.vala  recent_provider.vala  samba_provider.vala
src/shell/: global_menu_bar.vala  osd_overlay.vala  screen_flash.vala  shell_dialog.vala
src/style/: high-contrast.css  style.css  style.dark.css  style.light.css  style_manager.vala  theme_mode.vala
src/system/: accounts_service.vala  app_menu_registrar.vala  audio_manager.vala  autostart_manager.vala  bluetooth_manager.vala  brightness_manager.vala  call_monitor.vala  datetime_manager.vala  gamemode_manager.vala  hardware_info.vala  input_source_util.vala  kbd_brightness_manager.vala  locale_manager.vala  night_light_manager.vala  nm_wrapper.vala  now_playing_cache.vala  power_manager.vala  power_profiles_manager.vala  resource_monitor.vala  session_manager.vala  shared_clock.vala  timezone_util.vala
src/ui/controls/: circular_button.vala  close_button.vala  color_picker_button.vala  icon_button.vala  quick_setting_tile.vala  search_entry.vala  segmented_control.vala  time_picker.vala
src/ui/dialogs/: app_dialog.vala  confirm_dialog.vala
src/ui/editor/: find_replace_bar.vala  floating_format_bar.vala  page_canvas.vala  ruler.vala  source_view.vala  style_chooser.vala
src/ui/navigation/: app_sidebar.vala  context_menu.vala  menu_row.vala  sidebar_row.vala  sidebar_section_label.vala  tab_container.vala  tabbar.vala
src/ui/pages/: browser_pill.vala  calendar_views.vala  screenshot_carousel.vala  status_page.vala  welcome_page.vala
src/ui/preferences/: preferences.vala  preferences_page.vala  preferences_window.vala
src/ui/visual/: carousel.vala  chart_widgets.vala  chip.vala  circular_progress.vala  column_browser.vala  command_palette.vala  data_grid_view.vala  data_list_view.vala  floating_panel.vala  hover_controls.vala  media_player_card.vala  overlay_search.vala  search_bubble.vala  sectioned_list.vala  step_island.vala
src/ui/windowing/: titlebar_inset.vala  toolbar.vala  window.vala
src/util/: color_util.vala  grid_layout.vala  hot_corner_logic.vala  tiling_layout.vala
src/vapi/: UpowerGlib-1.0.metadata  upower-glib.vapi
